src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Candidate_Pool__c</fullName>
        <label>Candidate Pool</label>
        <picklist>
            <picklistValues>
                <fullName>Sound Engineers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management - Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management - Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Engineer - Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Engineer - Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Engineer - Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Engineer - Level 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe__c</fullName>
        <label>Decision Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Immediately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desire_to_Relocate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desire to Relocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Know_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Quality__c</fullName>
        <formula>IF( Lead_Total__c &lt; 5,  IMAGE(&apos;/resource/Dollars/dollar_zero.png&apos;, &apos;zero&apos;) , 
 IF(Lead_Total__c &lt; 10, IMAGE(&apos;/resource/Dollars/dollar_one.png&apos;, &apos;one&apos;),
 IF(Lead_Total__c &lt; 15, IMAGE(&apos;/resource/Dollars/dollar_two.png&apos;, &apos;two&apos;) ,
 IF(Lead_Total__c &lt; 20, IMAGE(&apos;/resource/Dollars/dollar_three.png&apos;, &apos;three&apos;) ,
 IF(Lead_Total__c &lt; 25, IMAGE(&apos;/resource/Dollars/dollar_four.png&apos;, &apos;four&apos;) ,
 IMAGE(&apos;/resource/Dollars/dollar_five.png&apos;, &apos;five&apos;) ) ) ) ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rank__c</fullName>
        <formula>IF( (  Lead_Total__c  &gt;15),&quot;High Priority&quot;, IF(AND( Lead_Total__c  &lt;16, Lead_Total__c  &gt; 5),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Total__c</fullName>
        <formula>Score1__c + Score2__c  +Score3__c + Score4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <description>Employee Salary</description>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Score1__c</fullName>
        <formula>IF ( Know_Decision_Maker__c ,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score2__c</fullName>
        <formula>CASE(Decision_Timeframe__c  ,&quot;Immediately&quot;, 5, &quot;1-3 Months&quot;,4,&quot;3-6 Months&quot;, 3, &quot;6-12 Months&quot;, 2, &quot;Next Year&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Timeframe Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score3__c</fullName>
        <formula>IF( Project_Defined__c = True, 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Defined Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <inlineHelpText>used for datapacks</inlineHelpText>
        <label>external id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Lead_Quality__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>